== Affiliates - Changelog ==

= 4.15.0 =
* WordPress 6.0 compatible.
* Code cleanup, fixed trailing whitespace.
* Fixed missing code doc bits.
* Fixed code doc format issues.
* Fixed potential PHP 8.x compatibility issues when using null-parameter-sensitive math functions.

= 4.14.0 =
* WordPress 6.0 compatible.
* Tested with WordPress 6.1-alpha.
* PHP 8.1 compatibility fixed an instance of deprecated passing null to bcadd().
* PHP 8.1 compatibility guarded an instance of str_replace() against deprecated passing null to parameter #2.
* Reviewed nonce handling for missing nonces in requests.

= 4.13.0 =
* WordPress 6.0 compatible.
* PHP 8.1 compatibility fixed deprecated passing null to stripslashes().
* PHP 8.1 compatibility fixed deprecated passing null to strcmp().
* PHP 8.1 compatibility fixed deprecated passing null to trim().

= 4.12.0 =
* WordPress 6.0 compatible.
* Requires at least WordPress 5.6.
* Fixed a PHP Notice with WordPress 6 and updated our add_menu_page to use an integer for the plugin's menu position.
* Removed uses of the deprecated wp_cache_reset() function.

= 4.11.0 =
* WordPress 5.9 compatible.
* Requires at least WordPress 5.5.

= 4.10.0 =
* WordPress 5.8 compatible.
* Added the affiliates_updated_affiliate_status_params filter.
* Added the affiliates_new_affiliate_registration_params filter.
* Added the affiliates_new_affiliate_user_registration_params filter.
* Fixed use of deprecated block_categories filter with WordPress 5.8+ using the block_categories_all filter instead.
* Removed a dropped integration entry from add-ons.
* Affiliate registration form now shows account is closed for deleted affiliates.
* Referrals admin section now also includes deleted accounts when inoperative option is used.
* Modified internal filter handling to allow support for coupon overrides.
* Fixed wrong referrals count shown under Visits & Referrals when filters set.

= 4.9.0 =
* WordPress 5.7 compatible.